--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/bootstrap">
+  <script src="js/jquery-3.4.0.js"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
+  <title>Pig Dice</title>
 </head>
 <body>
+  Hello World
   
 </body>
 </html>
