--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/bootstrap">
   <script src="js/jquery-3.4.0.js"></script>
@@ -11,7 +9,9 @@
   <title>Pig Dice</title>
 </head>
 <body>
-  Hello World
+<h1>PIG DICE</h1>
+<img src="./images/dice.gif" alt="">
+
   
 </body>
 </html>
