--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 <h1>PIG DICE</h1>
 <img src="./images/dice.gif" alt="">
+<button class="button">Instructions</button>
+<button class="button">Start Game</button>
 
   
 </body>
