--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/bootstrap">
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Special+Elite|VT323" rel="stylesheet">
   <script src="js/jquery-3.4.0.js"></script>
   <script src="js/scripts.js" type="text/javascript"></script>
   <title>Pig Dice</title>
