--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Pig Dice</title>
 </head>
 <body>
-<h1>PIG DICE</h1>
-<img src="./images/dice.gif" alt="">
-<button class="button">Instructions</button>
+  <h1>PIG DICE</h1>
+  <img src="./images/dice.gif" alt="">
+  <button id="ins">Instructions</button>
   <div class="instructions">
     <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold"</p>
     <p>If the player rolls a 1, they score nothing and it becomes the next player's turn.</p>
@@ -20,7 +20,9 @@
     <p>If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</p>
     <p>First player to score 100 or more points wins.</p>
   </div>
-<button class="button">Start Game</button>
+  <a href="start.html">
+    <button id="start"> Start Game</button>
+  </a>
 
   
 </body>
