--- a/start.html
+++ b/start.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Play Game</title>
+    <link rel="stylesheet" href="./css/styles2.css">
+    <link rel="stylesheet" href="./css/bootstrap">
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Special+Elite|VT323" rel="stylesheet">
+    <script src="js/jquery-3.4.0.js"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
+    <title>Play Game</title>
 </head>
 <body>
-  <h1>Start Game</h1>
-  <h2>May the best player win &#128526</h2>
-  <div>
+  <div class="container">
+    <h1>Start Game</h1>
+    <h2>May the best player win &#128526</h2>
+    <div class="player">
      <p>Player 1</p>
-     
+     <img class="image1" src="./images/dice6.png" alt="">
+     <div id="die1">0</div>
+     <button class="roll" onclick="myFunction">ROLL</button>
+     <button class="hold" onclick="myFunction">HOLD</button>
+    </div>
+    <div class="player">
+      <p>Player 2</p>
+      <img class="image2" src="./images/dice6.png" alt="">
+      <div class="die2">0</div>
+      <button class="roll" onclick="myFunction">ROLL</button>
+      <button class="hold" onclick="myFunction">HOLD</button>
+    </div>
   </div>
-  <div>
-    <p>Player 2</p>
-
-  </div>
-  
 </body>
 </html>
