--- a/start.html
+++ b/start.html
@@ -14,17 +14,21 @@
     <h2>May the best player win &#128526</h2>
     <div class="player">
      <p>Player 1</p>
-     <img class="image1" src="./images/dice6.png" alt="">
+     <img class="image1" src="./images/llama.jpeg" alt="">
      <div id="die1">0</div>
-     <button class="roll" onclick="myFunction">ROLL</button>
-     <button class="hold" onclick="myFunction">HOLD</button>
+     <button class="roll" onclick="myFunction()">ROLL</button>
+     <button class="hold" onclick="myFunction()">HOLD</button>
+     <p>TOTAL:</p>
+     <p>SCORE:</p>
     </div>
     <div class="player">
       <p>Player 2</p>
-      <img class="image2" src="./images/dice6.png" alt="">
-      <div class="die2">0</div>
-      <button class="roll" onclick="myFunction">ROLL</button>
-      <button class="hold" onclick="myFunction">HOLD</button>
+      <img class="image2" src="./images/cuddles.jpeg" alt="">
+      <div id="die2">0</div>
+      <button class="roll" onclick="myFunction2()">ROLL</button>
+      <button class="hold" onclick="myFunction2()">HOLD</button>
+      <p>TOTAL:</p>
+      <p>SCORE:</p>
     </div>
   </div>
 </body>
