Make hold buttton functional

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
   <h1>PIG DICE</h1>
-  <img src="./images/dice.gif" alt="">
-  <button id="ins">Instructions</button>
-  <div class="instructions">
-    <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold"</p>
-    <p>If the player rolls a 1, they score nothing and it becomes the next player's turn.</p>
-    <p>The player rolls any other number, it is added to their turn total and the player's turn continues.</p>
-    <p>If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</p>
-    <p>First player to score 100 or more points wins.</p>
+  <img src="./images/die.gif" alt="">
+  <div class="showing">
+    <button id="ins">Instructions</button>
+    <div class="instructions">
+      <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold"</p>
+      <p>If the player rolls a 1, they score nothing and it becomes the next player's turn.</p>
+      <p>The player rolls any other number, it is added to their turn total and the player's turn continues.</p>
+      <p>If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</p>
+      <p>First player to score 100 or more points wins.</p>
+    </div>
   </div>
   <a href="start.html">
     <button id="start"> Start Game</button>
