--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <h1>PIG DICE</h1>
-  <img src="./images/die.gif" alt="">
+  <img  src="./images/die.gif" alt="">
   <div class="showing">
-    <button id="ins">Instructions</button>
+    <button id="ins" class="card">Instructions</button>
     <div class="instructions">
       <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold"</p>
       <p>If the player rolls a 1, they score nothing and it becomes the next player's turn.</p>
