--- a/start.html
+++ b/start.html
@@ -18,7 +18,7 @@
         <img class="image1 card" src="./images/llama.jpeg" alt="">
         <div id="die1">0</div>
         <button class="roll" onclick="myFunction()">ROLL</button>
-        <button class="hold" onclick="hold()">HOLD</button>
+        <button class="hold" onclick="playerHold()">HOLD</button>
         <p >TOTAL:</p>
         <p>SCORE:</p>
        </div>
@@ -29,7 +29,7 @@
       <img class="image2" src="./images/cuddles.jpeg" alt="">
       <div id="die2">0</div>
       <button class="roll" onclick="myFunction2()">ROLL</button>
-      <button class="hold" onclick="hold2()">HOLD</button>
+      <button class="hold" onclick="playerHold2()">HOLD</button>
       <p id="total">TOTAL:</p>
       <p id="score">SCORE:</p>
     </div>
