--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <title>Pig Dice</title>
 </head>
 <body>
+  <div class="loader">
+    <img src="./images/loader.gif" alt="">
+
+  </div>
   <h1>PIG DICE</h1>
   <img  src="./images/die.gif" alt="">
   <div class="showing">
